Update and rename Text Obfuscation Tool.html to index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>文本加密混淆工具（完整版·多语言）</title>
+    <title>文本加密混淆工具</title>
     <script src="https://cdn.bootcdn.net/ajax/libs/crypto-js/4.2.0/crypto-js.min.js"></script>
     <script src="https://cdn.bootcdn.net/ajax/libs/crypto-js/4.2.0/components/mode-ecb.min.js"></script>
     <script src="https://cdn.bootcdn.net/ajax/libs/crypto-js/4.2.0/components/pad-zeropadding.min.js"></script>
@@ -882,4 +882,5 @@
         }
     </script>
 </body>
+
 </html>
